// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`responseUtilsFactory _prepareSource should add fallbacks when CDN_STATIC_ROOT_URL is defined 1`] = `
{
  "esScripts": [
    [
      "cdn://static/js.es/app.client.2106a34c6b8bbad8.js",
      {
        "async": true,
        "crossorigin": "anonymous",
        "fallback": "/static/js.es/app.client.2106a34c6b8bbad8.js",
      },
    ],
    [
      "cdn://static/js.es/locale/en.371127fdbfbe93d2.js",
      {
        "async": true,
        "crossorigin": "anonymous",
        "fallback": "/static/js.es/locale/en.371127fdbfbe93d2.js",
      },
    ],
    [
      "cdn://static/js.es/vendors.a873907f25297544.js",
      {
        "async": true,
        "crossorigin": "anonymous",
        "fallback": "/static/js.es/vendors.a873907f25297544.js",
      },
    ],
  ],
  "scripts": [
    [
      "cdn://static/js/app.client.8dc14fd2c9e52eef.js",
      {
        "async": true,
        "crossorigin": "anonymous",
        "fallback": "/static/js/app.client.8dc14fd2c9e52eef.js",
      },
    ],
    [
      "cdn://static/js/locale/en.3c6a5e7a55bb2ab4.js",
      {
        "async": true,
        "crossorigin": "anonymous",
        "fallback": "/static/js/locale/en.3c6a5e7a55bb2ab4.js",
      },
    ],
    [
      "cdn://static/js/vendors.0e456297851f0a3a.js",
      {
        "async": true,
        "crossorigin": "anonymous",
        "fallback": "/static/js/vendors.0e456297851f0a3a.js",
      },
    ],
  ],
  "styles": [
    [
      "cdn://static/css/app.d0ad44d05f82db5f.css",
      {
        "fallback": "/static/css/app.d0ad44d05f82db5f.css",
        "rel": "stylesheet",
      },
    ],
  ],
}
`;

exports[`responseUtilsFactory _prepareSource should prepare default sources structure from provided manifest file 1`] = `
{
  "esScripts": [
    [
      "/static/js.es/app.client.2106a34c6b8bbad8.js",
      {
        "async": true,
        "crossorigin": "anonymous",
      },
    ],
    [
      "/static/js.es/locale/en.371127fdbfbe93d2.js",
      {
        "async": true,
        "crossorigin": "anonymous",
      },
    ],
    [
      "/static/js.es/vendors.a873907f25297544.js",
      {
        "async": true,
        "crossorigin": "anonymous",
      },
    ],
  ],
  "scripts": [
    [
      "/static/js/app.client.8dc14fd2c9e52eef.js",
      {
        "async": true,
        "crossorigin": "anonymous",
      },
    ],
    [
      "/static/js/locale/en.3c6a5e7a55bb2ab4.js",
      {
        "async": true,
        "crossorigin": "anonymous",
      },
    ],
    [
      "/static/js/vendors.0e456297851f0a3a.js",
      {
        "async": true,
        "crossorigin": "anonymous",
      },
    ],
  ],
  "styles": [
    [
      "/static/css/app.d0ad44d05f82db5f.css",
      {
        "rel": "stylesheet",
      },
    ],
  ],
}
`;

exports[`responseUtilsFactory _prepareSource should skip compilations without assets 1`] = `
{
  "esScripts": [
    [
      "/static/js.es/app.client.2106a34c6b8bbad8.js",
      {
        "async": true,
        "crossorigin": "anonymous",
      },
    ],
    [
      "/static/js.es/locale/en.371127fdbfbe93d2.js",
      {
        "async": true,
        "crossorigin": "anonymous",
      },
    ],
    [
      "/static/js.es/vendors.a873907f25297544.js",
      {
        "async": true,
        "crossorigin": "anonymous",
      },
    ],
  ],
  "scripts": [],
  "styles": [
    [
      "/static/css/app.d0ad44d05f82db5f.css",
      {
        "rel": "stylesheet",
      },
    ],
  ],
}
`;

exports[`responseUtilsFactory processContent should allow overrides through custom $Source definition 1`] = `
"<html><script id="ima-revival-settings">(function (root) {
      root.$Debug = true;
      root.$IMA = root.$IMA || {};
      $IMA.SPA = false;
      $IMA.$Language = "en";
      $IMA.$Env = "undefined";
      $IMA.$Debug = true;
      $IMA.$Version = "undefined";
      $IMA.$App = undefined;
      $IMA.$Protocol = "undefined";
      $IMA.$Host = "undefined";
      $IMA.$Path = "undefined";
      $IMA.$Root = "undefined";
      $IMA.$LanguagePartPath = "undefined";
    })(typeof window !== 'undefined' && window !== null ? window : global);
    </script><script id="ima-runner">runner{\\"esScripts\\":[[\\"/static/js/app.client.8dc14fd2c9e52eef.js\\",{\\"async\\":true,\\"crossorigin\\":\\"anonymous\\"}],[\\"/static/js/locale/en.3c6a5e7a55bb2ab4.js\\",{\\"async\\":true,\\"crossorigin\\":\\"anonymous\\"}],[\\"/static/js/vendors.0e456297851f0a3a.js\\",{\\"async\\":true,\\"crossorigin\\":\\"anonymous\\"}],\\"custom-script-src\\"]}</script><script id="ima-revival-cache">(function (root) {
      root.$IMA = root.$IMA || {};
      $IMA.Cache = {};
    })(typeof window !== 'undefined' && window !== null ? window : global);
    </script></html>"
`;

exports[`responseUtilsFactory processContent should interpolate revival scripts into page content 1`] = `
"<html><link href="/static/css/app.d0ad44d05f82db5f.css" rel="stylesheet" /><script id="ima-revival-settings">(function (root) {
      root.$Debug = true;
      root.$IMA = root.$IMA || {};
      $IMA.SPA = false;
      $IMA.$Language = "en";
      $IMA.$Env = "undefined";
      $IMA.$Debug = true;
      $IMA.$Version = "undefined";
      $IMA.$App = undefined;
      $IMA.$Protocol = "undefined";
      $IMA.$Host = "undefined";
      $IMA.$Path = "undefined";
      $IMA.$Root = "undefined";
      $IMA.$LanguagePartPath = "undefined";
    })(typeof window !== 'undefined' && window !== null ? window : global);
    </script><script id="ima-runner">runner{\\"scripts\\":[[\\"/static/js/app.client.8dc14fd2c9e52eef.js\\",{\\"async\\":true,\\"crossorigin\\":\\"anonymous\\"}],[\\"/static/js/locale/en.3c6a5e7a55bb2ab4.js\\",{\\"async\\":true,\\"crossorigin\\":\\"anonymous\\"}],[\\"/static/js/vendors.0e456297851f0a3a.js\\",{\\"async\\":true,\\"crossorigin\\":\\"anonymous\\"}]],\\"esScripts\\":[[\\"/static/js.es/app.client.2106a34c6b8bbad8.js\\",{\\"async\\":true,\\"crossorigin\\":\\"anonymous\\"}],[\\"/static/js.es/locale/en.371127fdbfbe93d2.js\\",{\\"async\\":true,\\"crossorigin\\":\\"anonymous\\"}],[\\"/static/js.es/vendors.a873907f25297544.js\\",{\\"async\\":true,\\"crossorigin\\":\\"anonymous\\"}]]}</script></html>"
`;
